# usplasi_ladybug2

./: .gitignore  CMakeLists.txt  package.xml
doc/: manifest.yaml
doc/html/: dir_000000_000001.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d40a81339dc8edeec5367b54c6e1d3b9.html  dir_d40a81339dc8edeec5367b54c6e1d3b9_dep.map  dir_d40a81339dc8edeec5367b54c6e1d3b9_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23_dep.map  dir_d44c64559bbebec7f509842c48db8b23_dep.md5  files.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  graph_legend.html  index-msg.html  index.html  ladybugUtilities_8cpp.html  ladybugUtilities_8cpp__incl.map  ladybugUtilities_8cpp__incl.md5  ladybugUtilities_8cpp_source.html  ladybugUtilities_8h.html  ladybugUtilities_8h__dep__incl.map  ladybugUtilities_8h__dep__incl.md5  ladybugUtilities_8h__incl.map  ladybugUtilities_8h__incl.md5  ladybugUtilities_8h_source.html  publishSplitLadybug_8cpp.html  publishSplitLadybug_8cpp__incl.map  publishSplitLadybug_8cpp__incl.md5  publishSplitLadybug_8cpp_source.html  publishSplitLadybug_8h.html  publishSplitLadybug_8h__dep__incl.map  publishSplitLadybug_8h__dep__incl.md5  publishSplitLadybug_8h__incl.map  publishSplitLadybug_8h__incl.md5  publishSplitLadybug_8h_source.html
include/ladybug2/: Ladybug2.h  ladybugUtilities.h  publishSplitLadybug.h
ladybug2/: README.md
ladybug2/launch/: playBag.launch
ladybug2/param/: ROI_providedCalib.yaml  cam_ideal.yaml
ladybug2/param/manual_calibration/: cam0.yaml
ladybug2/param/provided_calibration/: cam3.yaml
ladybug2/src/: Ladybug2.cpp  publishSplitLadybug.cpp
launch/: playBag.launch  startCamera.launch
param/: cam0.yaml  cam1.yaml  cam2.yaml  cam3.yaml  cam4.yaml  cam5.yaml
param/provided_calibration/: cam0.yaml  cam1.yaml  cam2.yaml  cam4.yaml  cam5.yaml
src/: Ladybug2.cpp  ladybugUtilities.cpp  publishSplitLadybug.cpp  saveRectificationMaps.cpp
