<?xml version="1.0"?>
<package>
  <name>ladybug2</name>
  <version>0.0.0</version>
  <description>The ladybug2 package</description>

  <maintainer email="anaritap44@gmail.com">anaritaflp</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>camera_calibration_parsers</build_depend>
  <build_depend>cmake_modules</build_depend>
    
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>camera_calibration_parsers</run_depend>
  <run_depend>cmake_modules</run_depend> 
</package>
